vlib/v/checker/tests/ierror_on_option_err.vv
struct Struct {
	error ?string
}

fn result_function() !Struct {
	return error('This is an error')
}

fn main() {
	some_struct := result_function() or {
		Struct{
			error: err
		}
	}
	println(some_struct)
}
